[gd_scene load_steps=11 format=3 uid="uid://ko5m0q211eoq"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7c7bn"]
[ext_resource type="Texture2D" uid="uid://b83pifobcrlhb" path="res://assets/somakari.png" id="2_lv1jn"]
[ext_resource type="Texture2D" uid="uid://phpcqlo05vor" path="res://assets/kriszkari.png" id="2_t84ha"]
[ext_resource type="AudioStream" uid="uid://cbilr0qo7e4mo" path="res://assets/somaJAHOOcut.mp3" id="4_4tvro"]
[ext_resource type="AudioStream" uid="uid://b1e63jrwk7onm" path="res://assets/somaAAAcut.mp3" id="5_yrjqu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fa54n"]
size = Vector2(27, 46)

[sub_resource type="Animation" id="Animation_rh08w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("YahooPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AAAplayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_r6tgf"]
resource_name = "death"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AAAplayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.183011),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tix5g"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("YahooPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ip7c"]
_data = {
"RESET": SubResource("Animation_rh08w"),
"death": SubResource("Animation_r6tgf"),
"jump": SubResource("Animation_tix5g")
}

[node name="Player" type="CharacterBody2D"]
z_index = 2
collision_layer = 2
platform_on_leave = 2
script = ExtResource("1_7c7bn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_fa54n")

[node name="SomaSprite2D" type="Sprite2D" parent="."]
position = Vector2(1.5, 8.34465e-07)
scale = Vector2(0.484375, 0.479167)
texture = ExtResource("2_lv1jn")

[node name="KriszSprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(1.5, 8.34465e-07)
scale = Vector2(0.484375, 0.479167)
texture = ExtResource("2_t84ha")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
callback_mode_method = 1
libraries = {
"": SubResource("AnimationLibrary_8ip7c")
}

[node name="YahooPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_4tvro")
volume_db = -12.0

[node name="AAAplayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_yrjqu")
volume_db = -12.0

[node name="Timer" type="Timer" parent="."]
wait_time = 1.05
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
